# Day20-Track2-ModelServing-Lab

./: hardware.json  pyproject.toml  requirements.txt
00-setup/: linux-setup.sh  macos-setup.sh  windows-setup.ps1
02-llama-cpp-server/: record-metrics.py  start-server.ps1  start-server.sh
BONUS-llama-cpp-optimization/: c2_kv_bench.sh  c2_quality_eval.sh  llama.cpp  result.md
BONUS-llama-cpp-optimization/benchmarks/: bonus-kv-cache-quality.md  bonus-kv-cache-quant.md  gpu-offload-sweep.py  raw_bench_kv_q4_0.txt  raw_kv_f16.txt  raw_kv_q4_0.txt  raw_kv_q8_0.txt  thread-sweep.py
BONUS-llama-cpp-optimization/benchmarks/quality_prompts/: output_p0_kvf16.txt  output_p0_kvq8_0.raw.txt  output_p1_kvq4_0.txt  output_p1_kvq8_0.raw.txt  output_p2_kvf16.txt  output_p2_kvq4_0.raw.txt  output_p3_kvq8_0.raw.txt  output_p3_kvq8_0.txt  output_p4_kvq4_0.raw.txt  output_p4_kvq4_0.txt  output_p5_kvf16.raw.txt  output_p5_kvf16.txt  output_p6_kvq4_0.raw.txt  output_p6_kvq4_0.txt  prompt_0.txt  prompt_1.txt  prompt_2.txt  prompt_3.txt  prompt_4.txt  prompt_5.txt  prompt_6.txt
benchmarks/: 01-quickstart-results.json  01-quickstart-results.md  02-server-metrics.csv  bonus-gpu-offload-sweep.json  bonus-gpu-offload-sweep.md  results.md
models/: active.json
submission/: REFLECTION.md
