[project]
name = "day20-modelserving-lab"
version = "0.1.0"
description = "Day 20 (AICB-P2T2) lab — Model Serving & Inference Optimization with llama.cpp"
requires-python = ">=3.10,<3.13"
readme = "README.md"

# Keep deps in requirements.txt — pyproject is here mostly so `pip install -e .` works.
dependencies = [
  "huggingface_hub>=0.24.0",
  "numpy>=1.26.0",
  "requests>=2.32.0",
  "locust>=2.30.0",
  "httpx>=0.27.0",
  "tabulate>=0.9.0",
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "sse-starlette>=2.1.0",
  "pydantic-settings>=2.4.0",
  "starlette-context>=0.3.6",
  "matplotlib>=3.8.0",
  "ipykernel>=6.29.0",
]

[project.optional-dependencies]
mlx = ["mlx>=0.18", "mlx-lm>=0.18"]      # Apple Silicon bonus only

[tool.setuptools]
# This isn't a package — students don't import lab modules. Skip auto-discovery.
py-modules = []
